chore: make it pro mode

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -7,7 +7,8 @@ name: Android
 on:
   push:
     branches:
-      - master
+      # - master
+      - real
 
 jobs:
   Build:
@@ -27,10 +28,10 @@ jobs:
       #     name: Unit Tests ${{ matrix.os }} ${{ matrix.sdk }}
       #     path: test-results.xml
       #     reporter: jest-junit
-      - name: Unlock Secrets
-        env:
-          GITCRYPT_KEY: ${{ secrets.GITCRYPT_KEY }}
-        run: ./scripts/decrypt_secrets.sh
+      # - name: Unlock Secrets
+      #   env:
+      #     GITCRYPT_KEY: ${{ secrets.GITCRYPT_KEY }}
+      #   run: ./scripts/decrypt_secrets.sh
       - name: Setup Env
         run: dart ./scripts/setup_env.dart
       - name: Build
